# ade-toolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ade-architecture-design.md  ade-research-findings.md  future-hardening.md  orchestrator-invariants.md
docs/superpowers/plans/: 2026-04-05-core-cli.md  2026-04-05-crewai-runner.md  2026-04-05-sdlc-integration.md  2026-04-05-v1-production-hardening.md
src/ade/: __init__.py  circuit_breaker.py  cli.py  config.py  detect.py  logging_setup.py  recovery.py  tasks.py  worktrees.py
src/ade/crew/: __init__.py  __main__.py  agents.py  handoff.py  ollama.py  progress.py  runner.py
src/ade/crew/tools/: __init__.py  git.py  safe_file.py  safe_shell.py  search.py
src/ade/templates/: claude_md_section.md.j2  pre_commit_config.yaml.j2  settings_json.j2
src/ade/templates/agents/: pr-reviewer.md.j2
src/ade/templates/commands/: ade_code.md.j2  ade_full.md.j2  ade_plan.md.j2  ade_pr_review.md.j2  ade_review.md.j2  ade_ship.md.j2  ade_status.md.j2
src/ade/templates/crew/: architect.yaml.j2  coder.yaml.j2  fixer.yaml.j2  researcher.yaml.j2  reviewer.yaml.j2  (+1 more)
tests/: conftest.py  test_agents.py  test_circuit_breaker.py  test_cli.py  test_cli_resume.py  test_cli_status.py  test_cli_update.py  test_config.py  test_config_migration.py  test_crew_integration.py  test_detect.py  test_git_tool.py  test_handoff.py  test_logging_setup.py  test_ollama.py  test_progress.py  test_recovery.py  test_runner.py  test_safe_file.py  test_safe_shell.py  test_sdlc_integration.py  test_search_tool.py  test_tasks.py  test_worktrees.py
(+9 files in other folders)
